# groad

./: .clang-format  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
assets/scenes/: referenceScene.json  simpleScene.json
assets/shaders/: centroid_ps.hlsl  centroid_vs.hlsl  color.fx  cursor_gs.hlsl  cursor_ps.hlsl  cursor_vs.hlsl  infinite_grid_ps.hlsl  infinite_grid_vs.hlsl  torus_ps.hlsl  torus_vs.hlsl
assets/shaders/beziers/bezier_c0/: bezier_c0_border_gs.hlsl  bezier_c0_ds.hlsl  bezier_c0_hs.hlsl  bezier_c0_ps.hlsl  bezier_c0_vs.hlsl
assets/shaders/cursor/: cursor_gs.hlsl  cursor_ps.hlsl
assets/shaders/grid/: infinite_grid_ps.hlsl  infinite_grid_vs.hlsl
assets/shaders/torus/: default_renderable_ps.hlsl  default_renderable_vs.hlsl  torus_ps.hlsl
assets/textures/: cubemap.dds  forest.dds
cmake/: functions.cmake
src/: CMakeLists.txt  app.ixx  main.cpp  mg.hpp  ui.cpp  utils.hpp  utils.ixx
src/core/: core.ixx  utils.cpp  utils.h  utils.hpp
src/core/submodules/: camera.ixx  context.ixx  demo.ixx  model_loader.ixx  options.ixx  renderables.ixx  scene.ixx  surface.ixx  torus.ixx  watersurface.ixx
src/core/submodules/api/: base_renderer.ixx  renderer_factory.cpp
src/core/submodules/api/dx/: dx_renderer.ixx
src/core/submodules/api/dx/dx11/: dx11_renderer.ixx
src/core/submodules/api/dx/dx12/: dx12_renderer.ixx
src/core/submodules/platform/: base_window.ixx  window_factory.cpp
src/core/submodules/platform/win32/: platform.ixx
src/demos/: cad.ixx  cad_demo.ixx  duck.ixx  duck_demo.ixx  gable_demo.ixx  sso_demo.ixx
src/shaders/: shaders.hpp  shaders_loader.inl  square.hlsl
src/shaders/bezier/: bezier_hs.hlsl  bezier_ps.hlsl  bezier_vs.hlsl
src/shaders/beziers/bezier_c0/: bezier_c0_border_gs.hlsl  bezier_c0_hs.hlsl  bezier_c0_ps.hlsl  bezier_c0_vs.hlsl
src/shaders/beziers/bezier_c2/: bezier_c2_border_gs.hlsl  bezier_c2_ds.hlsl  bezier_c2_hs.hlsl  bezier_c2_vs.hlsl
src/shaders/beziers/bezier_curve/: bezier_border_gs.hlsl  bezier_ds.hlsl
src/shaders/beziers/bezier_patch_c0/: bezier_patch_c0_ds.hlsl  bezier_patch_c0_hs.hlsl  bezier_patch_c0_ps.hlsl  bezier_patch_c0_vs.hlsl
src/shaders/beziers/bezier_patch_c2/: bezier_patch_c2_border_gs.hlsl  bezier_patch_c2_ds.hlsl  bezier_patch_c2_hs.hlsl  bezier_patch_c2_ps.hlsl  bezier_patch_c2_vs.hlsl
src/shaders/billboard/: billboard_ps.hlsl  billboard_vs.hlsl
src/shaders/blend/: blend_ps.hlsl  blend_vs.hlsl
src/shaders/cursor/: cursor_gs.hlsl  cursor_ps.hlsl  cursor_vs.hlsl
src/shaders/default_renderable/: default_renderable_ps.hlsl  default_renderable_vs.hlsl
src/shaders/duck/: duck_ps.hlsl  duck_vs.hlsl
src/shaders/gable/: gable_border_ps.hlsl  gable_border_vs.hlsl  gable_ds.hlsl  gable_hs.hlsl  gable_ps.hlsl  gable_vs.hlsl
src/shaders/grid/: infinite_grid_ps.hlsl  infinite_grid_vs.hlsl
src/shaders/surfaces/infinite_grid/: infinite_grid_ps.hlsl  infinite_grid_vs.hlsl
src/shaders/surfaces/water_surface/: water_surface_ps.hlsl  water_surface_vs.hlsl
src/shaders/torus/: default_renderable_ps.hlsl  default_renderable_vs.hlsl
src/shaders/walls/: walls_ps.hlsl  walls_vs.hlsl
